<resources>
    <string name="app_name">Social Links</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">237301026961796</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb237301026961796</string>

    <string name="title_activity_products">ProductsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_menu_products">Products</string>
    <string name="nav_menu_links">Links</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_menu_logout">Log Out</string>
    <string name="communicate">Communicate</string>
    <string name="contDescription_product_image">Imagem ilustrativa do produto</string>
    <string name="contDescription_price_icon">Icone do preço do produto</string>
    <string name="currency">R$</string>
    <string name="commission_porcentage_label">%</string>
    <string name="snackbar_clipboard">Link copied to your clipboard.</string>
    <string name="fab_action_buy">Buy</string>
    <string name="snackbar_retrieve_link_error">Link was not found.</string>
    <string name="snackbar_buy_successful_message">Congrats! Your product will be delivered soon.</string>
    <string name="snackbar_buy_fail_message">Sorry. An error occurred related to your buy</string>
    <string name="no_links_message">You haven\'t shared any link yet.</string>
    <string name="product_removed">removed from your list.</string>
    <string name="undo_product_removed">UNDO</string>
    <string name="concat_suffix_to_short_product_name">… </string>
    <string name="contDescription_delete_icon">Delete icon</string>
    <string name="delete">DELETE</string>
    <string name="contDescription_icon_no_internet">No internet connection icon</string>
    <string name="button_try_again">Close Message</string>
    <string name="no_internet_message">You are offline. Please, check your internet connection.</string>
    <string name="trying_reconnect">Trying to reconnect…</string>
    <string name="button_close_message">Close this message</string>
    <string name="future_feature_message">Feature will be implemented soon.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="channel_name">Widget</string>
    <string name="widget_description">Retrieves links from the server.</string>
    <string name="fab_facebook_soon">Facebook share will be implemented soon.</string>
    <string name="fab_instagram_soon">Instagram share will be implemented soon.</string>
    <string name="fab_twitter_soon">Twitter share will be implemented soon.</string>
    <string name="contDescription_fab_share">Share</string>
    <string name="contDescription_icon_cash_made">How much money you made icon</string>
    <string name="contDescription_icon_buyCounts">Icon indicates how many times the product was bought throgh your link.</string>
</resources>
