<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_margin="@dimen/margin_cards"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/contDescription_product_image"/>

        <TextView
            android:id="@+id/tv_product_title"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/comp_card_padding"
            android:textColor="@color/iconsText"
            android:ellipsize="end"
            android:maxLines="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/comp_card_padding"
                android:paddingStart="@dimen/comp_card_padding"
                android:paddingTop="@dimen/comp_card_padding"
                android:textColor="@color/divider"
                android:text="@string/currency"/>

            <TextView
                android:id="@+id/tv_product_price"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/divider" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/comp_card_padding"
                android:paddingStart="@dimen/comp_card_sec_padding"
                android:paddingBottom="@dimen/comp_card_padding"
                android:paddingEnd="@dimen/margin_cards"
                app:srcCompat="@drawable/ic_commission_24"
                android:contentDescription="@string/contDescription_price_icon"/>

            <TextView
                android:id="@+id/tv_product_commission"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/divider" />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commission_porcentage_label"
                android:textColor="@color/divider" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
