<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_link_delete">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="@dimen/icon_delete_layout"
            android:layout_height="@dimen/icon_delete_layout"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/icon_delete_margin"
            app:srcCompat="@drawable/ic_delete_white_24"
            android:contentDescription="@string/contDescription_delete_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/icon_delete_margin"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="@dimen/delete_text_size" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_foreground"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/material_grey_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_product_mini_linkScreen"
        android:layout_width="@dimen/product_image_size"
        android:layout_height="@dimen/product_image_size"
        android:layout_marginBottom="@dimen/product_image_margin_bottom"
        android:layout_marginStart="@dimen/product_image_margin_start"
        android:layout_marginTop="@dimen/product_image_margin_top"
        android:contentDescription="@string/contDescription_product_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_menu_profile_picture_75" />

    <TextView
        android:id="@+id/tv_product_title_linkScreen"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_title_margin_start"
        android:layout_marginTop="@dimen/product_title_margin_top"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxWidth="@dimen/product_title_max_width"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintStart_toEndOf="@id/iv_product_mini_linkScreen"
        app:layout_constraintTop_toTopOf="@id/iv_product_mini_linkScreen"
        tools:text="Samsung Galaxy S9" />

    <TextView
        android:id="@+id/tv_product_link"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/product_link_margin_bottom"
        android:layout_marginTop="@dimen/product_link_margin_top"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintBottom_toBottomOf="@id/iv_product_mini_linkScreen"
        app:layout_constraintStart_toStartOf="@id/tv_product_title_linkScreen"
        app:layout_constraintTop_toBottomOf="@id/tv_product_title_linkScreen"
        tools:text="https://www.sociallinks.com/dJwI" />

    <ImageView
        android:id="@+id/iv_icon_buyCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/icon_buyCounts_margin_end"
        app:layout_constraintEnd_toStartOf="@id/iv_icon_cash_made"
        app:layout_constraintTop_toTopOf="@id/tv_product_title_linkScreen"
        app:srcCompat="@drawable/ic_shopping_cart_black_24"
        android:contentDescription="@string/contDescription_icon_buyCounts" />

    <ImageView
        android:id="@+id/iv_icon_cash_made"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/icon_buyCounts_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_icon_buyCounts"
        app:srcCompat="@drawable/ic_money_black_24"
        android:contentDescription="@string/contDescription_icon_cash_made" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textSize="@dimen/currency_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cash"
        app:layout_constraintEnd_toStartOf="@id/tv_cash" />

    <TextView
        android:id="@+id/tv_cash"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_buyCounts"
        app:layout_constraintEnd_toStartOf="@id/iv_icon_cash_made"
        app:layout_constraintStart_toEndOf="@id/iv_icon_cash_made"
        tools:text="500" />

    <TextView
        android:id="@+id/tv_buyCounts"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_product_link"
        app:layout_constraintEnd_toStartOf="@id/iv_icon_buyCounts"
        app:layout_constraintStart_toEndOf="@id/iv_icon_buyCounts"
        tools:text="25" />

</android.support.constraint.ConstraintLayout>

</FrameLayout>