<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_shopScreen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarLayout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar_layout_shopScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMargin="@dimen/activity_horizontal_margin"
            app:expandedTitleMarginBottom="@dimen/toolbar_margin_bottom"
            app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
            app:layout_scrollFlags="scroll"
            app:toolbarId="@+id/toolbar_shopScreen">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/iv_product_photo_shopScreen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/photo_background_protection" />

                <LinearLayout
                    android:id="@+id/meta_bar_shopScreen"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_linearLayout_height"
                    android:layout_gravity="bottom"
                    android:paddingStart="@dimen/title_linearLayout_padding_start"
                    android:paddingTop="@dimen/title_linearLayout_padding_top"
                    android:elevation="@dimen/title_linearLayout_elevation"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_product_price_signal_shopScreen"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/divider"
                        android:text="@string/currency"/>

                    <TextView
                        android:id="@+id/tv_product_price_shopScreen"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/divider" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/commission_icon_margin_start"
                        android:layout_marginEnd="@dimen/commission_icon_margin_end"
                        app:srcCompat="@drawable/ic_commission_24"
                        android:contentDescription="@string/contDescription_price_icon"/>

                    <TextView
                        android:id="@+id/tv_product_commission_shopScreen"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/divider" />

                    <TextView
                        android:id="@+id/tv_commission_porc_label_shopScreen"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/commission_porcentage_label"
                        android:textColor="@color/divider" />

                </LinearLayout>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detailed_shopScreen"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="@dimen/activity_horizontal_margin"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/movie_detail_container_shopScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_description_shopScreen"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_description_margin"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingTop="@dimen/product_description_margin"
                android:textColor="@color/colorPrimaryText" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="@dimen/fab_elevation"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/fab_action_buy"
        app:layout_anchor="@id/app_bar_shopScreen"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_shopping_cart_white_24"
        android:focusable="true" />


</android.support.design.widget.CoordinatorLayout>
